# py_web_hw-6

./: .gitignore  create_db.py  fill_data.py  make_queries.py  pyproject.toml  query.py  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  ref.py  university.db  university.sql
